# Trading-Stimulator

./: AutoFreezeOrder.h  Broker.cpp  Broker.h  CMakeLists.txt  DBManager.cpp  DBManager.h  README.md  autoFreezeOrder.cpp  enums.h  main.cpp  marketData.cpp  marketData.h  multicast_exchange.py  orderManager.h  strategyBase.h  user.cpp  user.h  workflow.pages
